Bug 106935 - UI: icon in Styles and Formatting window has tooltip "Paragraph Style" instead of "Fill Format Mode"
Summary: UI: icon in Styles and Formatting window has tooltip "Paragraph Style" instea...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.1.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.3
Keywords:
Depends on:
Blocks: Sidebar-Styles
  Show dependency treegraph
 
Reported: 2017-04-04 03:16 UTC by Gilward Kukel
Modified: 2017-05-22 17:11 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gilward Kukel 2017-04-04 03:16:34 UTC
Description:
icon in Styles and Formatting window has tooltip "Paragraph Style" instead of "Fill Format Mode"

Steps to Reproduce:
1. open Writer, Calc, Draw or Impress
2. open the Styles and Formatting window
3. look at the second icon from the right (Writer) or the third icon from the right (Calc, Draw, Impress)

Actual Results:  
the icon's tooltip is "Paragraph Style"

Expected Results:
it should be "Fill Format Mode" like it used to be and like it says in the Getting Started Handbook


Reproducible: Always

User Profile Reset: yes

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 2 Xisco Faulí 2017-04-04 09:36:19 UTC
The label was changed by this commit: 0b14725c7b188b78eddafae7ea6761865dfc81ab
However, I don't know whether it should be changed in the code or whether the documentation should be updated.

Adding Caolán McNamara and Olivier Hallot to hear their opinion
Comment 3 Caolán McNamara 2017-04-04 13:27:47 UTC
The label for uno:StyleApply comes from officecfg, but this one happens to be super complex and the default title is "Paragraph Style, Set Paragraph Style", which is unhelpful. Easiest thing is to restore the explicit overriding of the toolbar name
Comment 4 Commit Notification 2017-04-04 13:31:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1a53e7a0b388e0a5303fe68dfbb4c60f4c7a0ff

Resolves: tdf#106935 restore traditional toolbar labels

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2017-04-04 13:39:19 UTC
backport in 5-3 gerrit, maybe problematic because of translations
Comment 6 Olivier Hallot 2017-04-04 19:55:50 UTC
The book is right, the water can icon has a incorrect label and tooltip.

Actually the last string change was done in WriterCommands.xcu by 37ad8daabf596e039b4ca62e06e91d5a83128b7c

https://cgit.freedesktop.org/libreoffice/core/commit/?id=37ad8daabf596e039b4ca62e06e91d5a83128b7c

(bottom of the page)

The "Water can" icon applies paragraph, character and page styles and is disabled for frame, table and lists styles.

My suggestion is "Apply selected style" or "Apply Style"
Same for the tooltip.

On Calc, the water can applies to cells and page styles. But the string is taken from WriterCommands.xcu.

Pootle string is K9EGb

https://translations.documentfoundation.org/pt_BR/libo_ui/translate/officecfg/registry/data/org/openoffice/Office/UI.po#unit=117692554
Comment 7 Commit Notification 2017-04-05 00:09:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e0220ce0d9e20577694b56011cfe34d1bc35fc5&h=libreoffice-5-3

Resolves: tdf#106935 restore traditional toolbar labels

It will be available in 5.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Thomas Lendo 2017-05-22 11:06:45 UTC
Set to FIXED.

Tested with version 5.3.3.2
Build ID: 3d9a8b4b4e538a85e0782bd6c2d430bafe583448
CPU Threads: 8; OS Version: Windows 6.2; UI Render: default; Layout Engine: new; Locale: de-DE (de_DE); Calc: CL
Comment 9 Yousuf Philips (jay) (retired) 2017-05-22 17:11:11 UTC
(In reply to Caolán McNamara from comment #3)
> The label for uno:StyleApply comes from officecfg, but this one happens to
> be super complex and the default title is "Paragraph Style, Set Paragraph
> Style", which is unhelpful. Easiest thing is to restore the explicit
> overriding of the toolbar name

Yes that is true and it should likely have been the only one that should have been fixed, as .uno:StyleNewByExample and .uno:StyleUpdateByExample using the label from officecfg rather than a separate label will save translation work.