Resolves: tdf#106935 restore traditional toolbar labels

(cherry picked from commit f1a53e7a0b388e0a5303fe68dfbb4c60f4c7a0ff)

Change-Id: I00cf16e9ce429f9186cc900a07f4d386e33b8f7b
Reviewed-on: https://gerrit.libreoffice.org/36083
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>